# jack

./: .gitignore  Expanded_Knowledge.md  GAUNTLET_AUDIT_REPORT.md  Jack_0.5.1_BETA.txt  Jack_0.5_BETA.txt  README.md  config.yaml  pyproject.toml  update_seal.py
jack/: cli.py  main.py
jack/agents/: tas_general_agent.py
jack/chassis/: chassis.lock.json  config.py  contract_validator.py  interrupt_handler.py  models.py  prompt_registry.py  prompts.lock.json  router.py  sovereign_constants.py  sovereign_lock.py  step_executor.py  tas_judge.py  tool_synthesizer.py  vault.py
jack/engines/providers/: openai_compatible.py
jack/ingestion/: interceptor.py
jack/memory/: hot_context.py  librarian.py
jack/pillars/: audio_studio.py  eyes.py  judge.py  muscle.py  visual_studio.py
jack/tools/: __init__.py  python_sandbox.py
jack/tools/browser/: __init__.py  web_navigator.py
